[gd_scene load_steps=22 format=2]

[ext_resource path="res://Nodes/Ui/Description.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Ui/Inventory/portrait.tscn" type="PackedScene" id=2]
[ext_resource path="res://Nodes/Ui/Indicator.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/UI/Reusables/ItemListMenu.gd" type="Script" id=4]
[ext_resource path="res://Fonts/BottleRocket.tres" type="DynamicFont" id=5]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultbox.png" type="Texture" id=6]
[ext_resource path="res://Nodes/Ui/arrow.tscn" type="PackedScene" id=7]
[ext_resource path="res://Nodes/Ui/HighlightLabel.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fonts/EBMain.tres" type="DynamicFont" id=9]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultempty.png" type="Texture" id=10]
[ext_resource path="res://Graphics/UI/Overworld/flavours/defaultbox_inside.png" type="Texture" id=11]
[ext_resource path="res://Nodes/Ui/Shop/CashBoxShop.tscn" type="PackedScene" id=12]
[ext_resource path="res://Nodes/Ui/DescriptionWithYesNo.tscn" type="PackedScene" id=13]
[ext_resource path="res://Fonts/EBMain_la.tres" type="DynamicFont" id=14]
[ext_resource path="res://Scripts/UI/Shop/ShopUI.gd" type="Script" id=15]
[ext_resource path="res://Scripts/UI/Reusables/DescriptionModal.gd" type="Script" id=16]
[ext_resource path="res://Nodes/Ui/HighlightLabel.gd" type="Script" id=18]
[ext_resource path="res://Scripts/UI/colorRectFlavor.gd" type="Script" id=19]
[ext_resource path="res://Shaders/MenuFlavors.tres" type="Material" id=20]
[ext_resource path="res://Nodes/Ui/Reusables/Scrollbar.tscn" type="PackedScene" id=22]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.729412, 0.32549, 0.894118, 1 )

[node name="ShopUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
script = ExtResource( 15 )

[node name="ShopBox" type="Control" parent="."]
margin_left = 136.0
margin_top = 4.0
margin_right = 292.0
margin_bottom = 130.0
rect_clip_content = true

[node name="Header" type="NinePatchRect" parent="ShopBox"]
material = ExtResource( 20 )
margin_right = 156.0
margin_bottom = 31.0
texture = ExtResource( 10 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Title" type="NinePatchRect" parent="ShopBox/Header"]
material = ExtResource( 20 )
margin_left = 82.0
margin_right = 156.0
margin_bottom = 28.0
texture = ExtResource( 11 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Label" type="Label" parent="ShopBox/Header/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "SHOP_SHOP"
align = 1
valign = 1

[node name="CashBox" parent="ShopBox/Header" instance=ExtResource( 12 )]
margin_left = 15.0
margin_right = 71.0

[node name="BuyMenu" type="NinePatchRect" parent="ShopBox"]
material = ExtResource( 20 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
texture = ExtResource( 6 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
script = ExtResource( 4 )
loop_around = true

[node name="MarginContainer" type="MarginContainer" parent="ShopBox/BuyMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 17
custom_constants/margin_top = 8
custom_constants/margin_left = 17
custom_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="ShopBox/BuyMenu/MarginContainer"]
margin_left = 17.0
margin_top = 8.0
margin_right = 139.0
margin_bottom = 95.0
custom_constants/separation = 1

[node name="ShopItem" type="HBoxContainer" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer"]
margin_right = 122.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem"]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 1 )
text = "Pornography"
valign = 1
script = ExtResource( 18 )

[node name="PriceLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem2" type="HBoxContainer" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 122.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem2"]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 1 )
text = "Equippable"
valign = 1
script = ExtResource( 18 )

[node name="PriceLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem2"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem3" type="HBoxContainer" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 122.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem3"]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 1 )
text = "Pornography"
valign = 1
script = ExtResource( 18 )

[node name="PriceLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem3"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem4" type="HBoxContainer" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 122.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem4"]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 1 )
text = "Pornography"
valign = 1
script = ExtResource( 18 )

[node name="PriceLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem4"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem5" type="HBoxContainer" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 122.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem5"]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 1 )
text = "Pornography"
valign = 1
script = ExtResource( 18 )

[node name="PriceLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem5"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem6" type="HBoxContainer" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 122.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem6"]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 14 )
custom_styles/normal = SubResource( 1 )
text = "Pornography"
valign = 1
script = ExtResource( 18 )

[node name="PriceLabel" type="Label" parent="ShopBox/BuyMenu/MarginContainer/VBoxContainer/ShopItem6"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="arrow" parent="ShopBox/BuyMenu" instance=ExtResource( 7 )]
position = Vector2( 12, 13 )
menu_parent_path = NodePath("../MarginContainer/VBoxContainer")
cursor_offset = Vector2( -5, 1 )
consume_input_events = true
skip_empty_labels = true
skip_hidden_items = true
move_sfx = true
cancel_on = true

[node name="Scrollbar" parent="ShopBox/BuyMenu" instance=ExtResource( 22 )]
margin_left = 141.0
margin_top = 6.0
margin_right = 149.0
margin_bottom = 94.0

[node name="SellMenu" type="NinePatchRect" parent="ShopBox"]
material = ExtResource( 20 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 25.0
texture = ExtResource( 6 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
script = ExtResource( 4 )
priceType = "value"
loop_around = true

[node name="MarginContainer" type="MarginContainer" parent="ShopBox/SellMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 17
custom_constants/margin_top = 8
custom_constants/margin_left = 17
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ShopBox/SellMenu/MarginContainer"]
margin_left = 17.0
margin_top = 8.0
margin_right = 139.0
margin_bottom = 93.0
custom_constants/separation = 1

[node name="ShopItem" type="HBoxContainer" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer"]
margin_right = 122.0
margin_bottom = 13.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem" instance=ExtResource( 8 )]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Pornography"
valign = 1

[node name="PriceLabel" type="Label" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem2" type="HBoxContainer" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 122.0
margin_bottom = 27.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem2" instance=ExtResource( 8 )]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Equippable"
valign = 1

[node name="PriceLabel" type="Label" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem2"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem3" type="HBoxContainer" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 122.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem3" instance=ExtResource( 8 )]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Pornography"
valign = 1

[node name="PriceLabel" type="Label" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem3"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem4" type="HBoxContainer" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 122.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem4" instance=ExtResource( 8 )]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Pornography"
valign = 1

[node name="PriceLabel" type="Label" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem4"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem5" type="HBoxContainer" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 122.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem5" instance=ExtResource( 8 )]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Pornography"
valign = 1

[node name="PriceLabel" type="Label" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem5"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="ShopItem6" type="HBoxContainer" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 122.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 13 )
custom_constants/separation = 0

[node name="ItemLabel" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem6" instance=ExtResource( 8 )]
margin_right = 95.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Pornography"
valign = 1

[node name="PriceLabel" type="Label" parent="ShopBox/SellMenu/MarginContainer/VBoxContainer/ShopItem6"]
margin_left = 95.0
margin_right = 122.0
margin_bottom = 13.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "1000"
align = 2
script = ExtResource( 18 )

[node name="arrow" parent="ShopBox/SellMenu" instance=ExtResource( 7 )]
position = Vector2( 12, 14 )
menu_parent_path = NodePath("../MarginContainer/VBoxContainer")
cursor_offset = Vector2( -5, 1 )
consume_input_events = true
skip_empty_labels = true
skip_hidden_items = true
move_sfx = true
cancel_on = true

[node name="ColorRect" type="ColorRect" parent="ShopBox/SellMenu/arrow"]
show_behind_parent = true
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0
color = Color( 0.0784314, 0.0666667, 0.0901961, 1 )
script = ExtResource( 19 )

[node name="Scrollbar" parent="ShopBox/SellMenu" instance=ExtResource( 22 )]
margin_left = 141.0
margin_top = 6.0
margin_right = 149.0
margin_bottom = 94.0

[node name="Separator" type="ColorRect" parent="ShopBox"]
margin_left = 1.0
margin_top = 25.0
margin_right = 155.0
margin_bottom = 29.0
color = Color( 0.952941, 0.94902, 0.956863, 1 )
script = ExtResource( 19 )

[node name="CharacterSelect" type="NinePatchRect" parent="."]
material = ExtResource( 20 )
margin_left = 28.0
margin_top = 4.0
margin_right = 123.0
margin_bottom = 32.0
texture = ExtResource( 10 )
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="CharacterPortraits" type="HBoxContainer" parent="CharacterSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 1
alignment = 1

[node name="Party1" parent="CharacterSelect/CharacterPortraits" instance=ExtResource( 2 )]
show_behind_parent = true
margin_left = 4.0
margin_right = 25.0
margin_bottom = 28.0

[node name="Party2" parent="CharacterSelect/CharacterPortraits" instance=ExtResource( 2 )]
show_behind_parent = true
margin_left = 26.0
margin_right = 47.0
margin_bottom = 28.0

[node name="Party3" parent="CharacterSelect/CharacterPortraits" instance=ExtResource( 2 )]
show_behind_parent = true
margin_left = 48.0
margin_right = 69.0
margin_bottom = 28.0

[node name="Party4" parent="CharacterSelect/CharacterPortraits" instance=ExtResource( 2 )]
show_behind_parent = true
margin_left = 70.0
margin_right = 91.0
margin_bottom = 28.0

[node name="IndicatorL" parent="CharacterSelect" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2.0
margin_top = 1.0
margin_right = -2.0
margin_bottom = 25.0
key = "ui_focus_prev"

[node name="IndicatorR" parent="CharacterSelect" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 97.0
margin_top = 1.0
margin_right = 97.0
margin_bottom = 25.0

[node name="BuySellDialog" type="NinePatchRect" parent="."]
material = ExtResource( 20 )
margin_left = 28.0
margin_top = 35.0
margin_right = 123.0
margin_bottom = 83.0
texture = ExtResource( 6 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="VBoxContainer" type="VBoxContainer" parent="BuySellDialog"]
margin_left = 14.0
margin_top = 10.0
margin_right = 86.0
margin_bottom = 36.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 0
custom_constants/separation = 2

[node name="YesLabel" parent="BuySellDialog/VBoxContainer" instance=ExtResource( 8 )]
margin_right = 72.0
text = "SHOP_BUY"

[node name="NoLabel" parent="BuySellDialog/VBoxContainer" instance=ExtResource( 8 )]
margin_top = 14.0
margin_right = 72.0
margin_bottom = 26.0
text = "SHOP_SELL"

[node name="arrow" parent="BuySellDialog" instance=ExtResource( 7 )]
position = Vector2( 11, 15 )
menu_parent_path = NodePath("../VBoxContainer")
on = true
consume_input_events = true
loop_around = true
highlight = true
move_sfx = true
select_sfx = true
cancel_on = true

[node name="DescBox" type="NinePatchRect" parent="."]
material = ExtResource( 20 )
margin_left = 28.0
margin_top = 132.0
margin_right = 292.0
margin_bottom = 180.0
texture = ExtResource( 6 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="DescriptionPanel" parent="DescBox" instance=ExtResource( 1 )]
margin_right = 264.0
script = ExtResource( 16 )

[node name="DescriptionDialog" parent="DescBox" instance=ExtResource( 13 )]
visible = false
margin_right = 264.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[connection signal="cancel" from="ShopBox/BuyMenu/arrow" to="ShopBox/BuyMenu" method="_on_arrow_cancel"]
[connection signal="cancel" from="ShopBox/SellMenu/arrow" to="ShopBox/SellMenu" method="_on_arrow_cancel"]
